k8s-resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: chip-websocket-ingress
  namespace: chip-websocket
spec:
  tls:
    - hosts:
        - websocket-example.dev.pessimistic-it.com
      secretName: websocket-example-dev-pessimistic-it-tls
  rules:
    - host: websocket-example.dev.pessimistic-it.com
      http:
        paths:
          - backend:
              service:
                name: chip-websocket
                port:
                  number: 80
            pathType: Prefix
            path: /
